fix(ActionBar): action-bar-title vertical-align centered for android, plus name migrate in platform

--- a/app/scss/_action-bar.scss
+++ b/app/scss/_action-bar.scss
@@ -5,6 +5,7 @@
   .action-bar-title {
     font-weight: bold;
     font-size:17;
+    vertical-align: center;
   }
 
   .action-item {
