--- a/app/scss/platforms/_action-bar.android.scss
+++ b/app/scss/platforms/_action-bar.android.scss
@@ -1,6 +1,6 @@
 .action-bar {
   
-  .action-title {
+  .action-bar-title {
     font-weight: 500;
     font-size:20;
   }
